fix(sidebar): reduce left spacing on mobile for contact details

--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -127,6 +127,8 @@ aside {
 			max-width: 480px;
 			@media only screen and (max-width: 767px) {
 				position: relative;
+				left: auto;
+				right: auto;
 			}
 			hr { 
 				border: none; 
